# TableFlow

./: .coverage  .gitignore  AGENTS.md  README.md  main.py  manage.py  pyproject.toml
apps/reservations/: admin.py  forms.py  models.py  urls.py  views.py
apps/reservations/migrations/: 0001_initial.py  0002_alter_table_options.py
apps/reservations/static/css/: style.css
apps/reservations/templates/reservations/: _table_options.html  base.html  confirmation.html  form.html  home.html  list.html
apps/reservations/tests/: test_forms.py  test_models.py  test_views.py
apps/web/: apps.py
config/: settings.py  urls.py
reservations/: models.py
specs/: api_spec.md  db_schema.md  session_template_design.md
